tests/ui/impl-trait/precise-capturing/unexpected-token.stderr
error: expected one of `,` or `>`, found `{`
  --> $DIR/unexpected-token.rs:5:27
   |
LL | fn hello() -> impl use<'a {}> Sized {}
   |                           ^ expected one of `,` or `>`

error: aborting due to 1 previous error

